--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
 
+permissions:
+  pull-requests: write
+  issues: write
+  contents: read
+
 jobs:
   in_memory_tests:
     runs-on: ubuntu-latest
